# VBox_tests_runner

./: .gitignore  README.md  builder_tests_config.json  config.json  conversions_tests_config.json  desktop_tests_config.json  pyproject.toml  s3_config.json  scheduler_config.json  tasks.py  test2.py
.cursor/rules/: architecture.mdc  vboxrules.mdc
.github/: dependabot.yml
.github/workflows/: pytest.yml  python_lint.yml  update-git-deps.yml
frameworks/: TestData.py  VersionHandler.py  __init__.py  console.py  console_lock.py
frameworks/DepTests/: __init__.py  dep_test.py  doc_builder.py
frameworks/VboxMachine/: VboxMachine.py  __init__.py  vm_data.py
frameworks/VboxMachine/configs/: __init__.py  vm_config.py
frameworks/decorators/: __init__.py  decorators.py
frameworks/jenkins/: __init__.py  config.py  jenkins.py  request_sender.py
frameworks/jenkins/auth/: auth.py
frameworks/package_checker/: __init__.py  check_packages.py  config.py  report.py  templates.json  urlcheck_params.py  urlcheck_result.py
frameworks/package_checker/config/: __init__.py  config.py  templates.json
frameworks/paths/: __init__.py  local_paths.py  paths.py  remote_paths.py
frameworks/report/: __init__.py  report.py
frameworks/report_portal/: __init__.py  portal_manager.py  report_sender.py
frameworks/s3/: __init__.py  config.py  s3_vbox.py
frameworks/ssh_connection/: ssh_connection.py
frameworks/test_data/: TestData.py  __init__.py  portal_data.py
frameworks/test_data/paths/: local_paths.py  paths.py  remote_paths.py
frameworks/test_scheduler/: __init__.py  scheduler.py
frameworks/test_scheduler/config/: __init__.py  config.py
frameworks/test_tools/: __init__.py  test_tools.py  test_tools_linux.py  test_tools_windows.py
frameworks/test_tools/ssh_connection/: __init__.py  linux_script_demon.py  ssh_connection.py
frameworks/test_tools/vbox_utils/: vbox_utils_vista.py  vbox_utils_windows.py
frameworks/tests_runner/: __init__.py  report.py  tests_runner.py
frameworks/vbox_utils/: vbox_utils_vista.py  vbox_utils_windows.py
frameworks/vm_manager/: __init__.py  config.py  vm_manager.py  vm_updater.py
tests/: __init__.py  multiprocessing.py
tests/builder_tests/: __init__.py  builder_portal_manager.py  builder_report.py  builder_report_sender.py  builder_test_data.py  builder_tests.py  packages_config.json  report_portal_manager.py  run_script.py  test_data.py
tests/builder_tests/builder_paths/: __init__.py  builder_local_paths.py  builder_paths.py  builder_remote_paths.py
tests/builder_tests/test_tools/: test_tools.py
tests/conversion_tests/: __init__.py  conversion_test_data.py  conversion_tests.py  packages_config.json  run_script.py
tests/conversion_tests/conversion_paths/: __init__.py  conversion_local_paths.py  conversion_paths.py  conversion_remote_paths.py
tests/desktop_tests/: __init__.py  desktop_tests.py  multiprocessing.py
tests/desktop_tests/data/: __init__.py
vm_configs/: desktop_test_vm_config.json  vm_config.json
(+43 files in other folders)
