[project]
name = "VBox_Tests_Runner"
version = "0.1.0"
description = ""
authors = [{ name = "l02", email = "l8556@outlook.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "invoke>=2",
    "rich>=14",
    "paramiko>=3",
    "pandas>=2",
    "elevate>=0.1.3",
    "ruff>=0.11",
    "pydantic>=2",
    "host-tools",
    "telegram",
    "vboxwrapper",
    "ssh-wrapper",
    "report-portal",
    "s3wrapper"
]

[tool.uv.sources]
host-tools = { git = "https://github.com/l8556/host_tools.git", branch = "master" }
telegram = { git = "https://github.com/l8556/TelegramApi.git", branch = "master" }
vboxwrapper = { git = "https://github.com/l8556/VBoxWrapper.git", branch = "master" }
ssh-wrapper = { git = "https://github.com/l8556/SshWrapper.git", branch = "master" }
report-portal = { git = "https://github.com/l8556/report_portal.git", branch = "master" }
s3wrapper = { git = "https://github.com/l8556/S3Wrapper.git", branch = "master" }


[tool.poetry]
name = "VBox_Tests_Runner"
version = "0.1.0"
description = ""
authors = ["l02 <l8556@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
invoke = "^2"
rich = "^14"
paramiko = "^3"
pandas = "^2"
elevate = "^0.1.3"
host-tools = { git = "https://github.com/l8556/host_tools.git", branch = "master" }
telegram = { git = "https://github.com/l8556/TelegramApi.git", branch = "master" }
vboxwrapper = { git = "https://github.com/l8556/VBoxWrapper.git", branch = "master" }
ssh-wrapper = { git = "https://github.com/l8556/SshWrapper.git", branch = "master" }
report-portal = { git = "https://github.com/l8556/report_portal.git", branch = "master" }
s3wrapper = { git = "https://github.com/l8556/S3Wrapper.git", branch = "master" }
ruff = "^0.11.12"
pydantic = "^2.11.5"