[project]
name = "VBox_Tests_Runner"
version = "0.1.0"
description = ""
authors = [{ name = "l02", email = "l8556@outlook.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "invoke>=2",
    "rich>=14",
    "paramiko>=3",
    "pandas>=2.3.0",
    "elevate>=0.1.3",
    "ruff>=0.12.0",
    "pydantic>=2.11.7",
    "pyppmd>=1.2.0",
    "inflate64>=1.0.3",
    "py7zr>=1",
    "aiohttp>=3.12.14",
    "apscheduler>=4.0.0a6",
    "host-tools",
    "telegram",
    "vboxwrapper",
    "ssh-wrapper",
    "report-portal",
    "s3wrapper",
    "pytest>=8.4.1",
]

[tool.uv.sources]
host-tools = { git = "https://github.com/l8556/host_tools.git", branch = "master" }
telegram = { git = "https://github.com/l8556/TelegramApi.git", branch = "master" }
vboxwrapper = { git = "https://github.com/l8556/VBoxWrapper.git", branch = "master" }
ssh-wrapper = { git = "https://github.com/l8556/SshWrapper.git", branch = "master" }
report-portal = { git = "https://github.com/l8556/report_portal.git", branch = "master" }
s3wrapper = { git = "https://github.com/l8556/S3Wrapper.git", branch = "master" }
